kubernetes/platform/networking/pihole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networking
  labels:
    homelab.io/tier: platform
    homelab.io/component: networking
