kubernetes/platform/networking/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: networking
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/part-of: homelab-networking
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.68.200
  selector:
    app.kubernetes.io/name: pihole
  ports:
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
